# clipcrab

./: .gitignore  Cargo.toml  README.md
clipcrab-detect/: Cargo.toml
clipcrab-detect/src/: lib.rs  main.rs  matchers.rs  ocr.rs  qr.rs  utils.rs
clipcrab-detect/src/seasons/: mod.rs  s2025_decode.rs
clipcrab-ingest/: Cargo.toml
clipcrab-ingest/src/: lib.rs  main.rs  seek.rs
clipcrab-io/: Cargo.toml
clipcrab-io/src/: clip.rs  lib.rs  main.rs  seek.rs  shell.rs  time.rs
src/: main.rs  model.rs  worker.rs
