[workspace]
members = ["clipcrab-detect","clipcrab-io"]

[package]
name = "clipcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
clipcrab-detect = { path = "./clipcrab-detect" }
clipcrab-io = { path = "./clipcrab-io" }
opencv = "0.98.0"
image = "0.25.9"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
tracing = "0.1.44"
crossbeam-channel = "0.5.15"
