[package]
name = "clipcrab-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
clipcrab-io = { path = "../clipcrab-io" }
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ocrs = "0.11.0"
opencv = { version = "0.98.0", features = ["clang-runtime"] }
rqrr = "0.10.0"
rten = "0.22.0"
rten-imageproc = "0.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.7"
tracing-flame = "0.2.0"

[profile.release]
debug = true